--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@twa-dev/sdk": "^8.0.2",
     "better-sqlite3": "^11.10.0",
     "next": "15.3.1",
     "react": "^19.0.0",
